--- a/Models/Tokenizers/2025.08.22_TaDiCodec.md
+++ b/Models/Tokenizers/2025.08.22_TaDiCodec.md
@@ -282,3 +282,270 @@ where $\boldsymbol{q}_i$ is the $i$-th token of $\boldsymbol{q}$.
 We also apply the non-autoregressive Masked Generative Modeling (MGM)[^Chang2022Maskgit], [^Wang2024Maskgct] for modeling speech tokens.
 
 See more details about MGM in the Appendix~[appendix:mgm](#appendix:mgm).
+
+## 4·Experiments
+
+We first describe the implementation details and datasets (Section~[sec:exp-set](#sec:exp-set)).
+
+We then present the speech reconstruction results of \myname{} in Section~[sec:speech_rec](#sec:speech_rec), including the main results (Section~[sec:tokenizer_main_res](#sec:tokenizer_main_res), Table~[tab:tokenizer-rec-res](#tab:tokenizer-rec-res)), multilingual performance (Table~[tab:rec-multilingual](#tab:rec-multilingual)), subjective evaluation results (Table~[tab:cmos](#tab:cmos)), and ablation studies on tokenizer design (Section~[sec:tokenizer_ablation](#sec:tokenizer_ablation), Table~[tab:ablation](#tab:ablation)).
+
+Section~[sec:zs-tts](#sec:zs-tts) reports the zero-shot TTS results of models built upon \myname{} (Table~[tab:zs-tts-res](#tab:zs-tts-res)), along with results on model size scaling and training and inference efficiency (Table~[tab:tts-scaling-rtf](#tab:tts-scaling-rtf)), and an analysis of the reconstruction–generation gap (Figure~[fig:rec-gen-gap](#fig:rec-gen-gap)).
+
+### Experimental Settings
+
+\label{sec:exp-set}
+
+**Datasets**\quad
+We use the Emilia[^He2024Emilia] dataset to train all of our models.
+
+Emilia is a multilingual and diverse in-the-wild speech dataset designed for large-scale speech generation.
+
+It contains 46.8K hours of English, 49.9K hours of Chinese, 1.6K hours of German, 1.4K hours of French, 1.7K hours of Japanese, and 0.2K hours of Korean.
+
+**Implementation Details**\quad
+We build \myname{} using standard Llama-style Transformer blocks[^Touvron2023Llama], with bidirectional attention instead of causal attention.
+
+The base configuration employs an 8-layer encoder and a 16-layer decoder, each with hidden size 1024, intermediate size 4096, and 16 attention heads.
+
+We further explore decoder variants; see Section~[sec:tokenizer_ablation](#sec:tokenizer_ablation) and Table~[tab:ablation](#tab:ablation) for details.
+
+We adopt RoPE positional embedding[^Su2024Roformer] and RMSNorm[^Zhang2019Root].
+
+For the text-aware diffusion decoder, RMSNorm is modified to Adaptive RMSNorm to condition on the diffusion step embedding.
+
+Text tokens are adapted from a pretrained LLM vocabulary[^Abdin2024Phi-3], [^Yang2024Qwen2.], and concatenated with speech features along the time axis before being input to the decoder.
+
+For vector quantization, we use BSQ[^Zhao2024Image] with a latent size of 14, yielding a codebook size of $2^{14} = 16384$.
+
+All models are trained on 8 80GB NVIDIA A100 GPUs using dynamic batching with 200 seconds of speech per batch.
+
+We train the tokenizer for 800K steps using AdamW[^Loshchilov2017Decoupled] with a learning rate of $7.5\times10^{-5}$ and 32K warmup steps.
+
+TTS models are trained for 300K steps with a learning rate of $3\times10^{-4}$ unless otherwise specified.
+
+AR models extend the vocabulary of pretrained textual LLMs[^Du2024CosyVoice], [^Ye2025Llasa] and are trained with 0.2B, 0.5B, 3.0B, and 4.0B parameters; see Section~[sec:zs-tts](#sec:zs-tts) for analysis.
+
+For MGM models, we follow the setup of[^Wang2024Maskgct].
+
+**Evaluation**\quad
+We evaluate our approach from two main perspectives: speech reconstruction using the proposed tokenizer (Section~[sec:speech_rec](#sec:speech_rec)) and zero-shot TTS performance (Section~[sec:zs-tts](#sec:zs-tts)).
+
+We assess intelligibility (WER), speaker similarity (SIM), and speech quality (UTMOS).
+
+Speaker similarity is computed as the cosine similarity between \texttt{WavLM-TDNN} embeddings of the prompt and generated speech[^Chen2022Wavlm]. 
+WER is measured using \texttt{whisper-large-v3}[^Radford2023Robust] for non-Chinese languages and \texttt{paraformer-zh}[^Gao2023Funasr] for Chinese, following prior work[^Wang2025Metis], [^Wang2024Maskgct], [^Anastassiou2024Seed-TTS], [^Du2024CosyVoice]. 
+Speech quality is evaluated using the official UTMOS checkpoint.
+
+In addition to objective metrics, we conduct subjective evaluation via Comparative Mean Opinion Score (CMOS).
+
+We do not report signal-level metrics (*e.g.*, PESQ, STOI), as our focus is on generation-oriented performance, in line with[^Wang2025Metis], [^Zhang2025AnyEnhance].
+
+Further Evaluation details are provided in Appendix~[appendix:eval](#appendix:eval).
+
+### Speech Reconstruction
+
+\label{sec:speech_rec}
+
+#### Main Results
+
+\label{sec:tokenizer_main_res}
+
+We report our main results on *SeedTTS test-en*[^Anastassiou2024Seed-TTS] in Table~[tab:tokenizer-rec-res](#tab:tokenizer-rec-res).
+
+We also evaluate our methods on multilingual test sets in Table~[tab:rec-multilingual](#tab:rec-multilingual).
+
+Subjective evaluation results are show in Table~[tab:cmos](#tab:cmos).
+
+**Baselines**\quad We compare with a wide range of baselines in settings where the token rate is less than 150: **1)** single stage with multi-layer codebook and adversarial training: EnCodec[^D{\'e}fossez2022High], DAC[^Kumar2024High-Fidelity], SpeechTokenizer[^Zhang2023Speechtokenizer], Mimi[^D{\'e}fossez2024Moshi], DualCodec[^Li2025DualCodec]; **2)** single stage with single-layer codebook and adversarial training: DAC (with single VQ), BiCodec[^Wang2025Spark-TTS], X-codec 2[^Ye2025Llasa], WavTokenizer[^Ji2024Wavtokenizer], BigCodec[^Xin2024Bigcodec], TAAE[^Parker2024Scaling]; **3)** two stage with diffusion decoder: SemantiCodec[^Liu2024Semanticodec], Vevo Tokenizer[^Zhang2025Vevo], FireRedTTS Tokenizer[^Guo2024FireRedTTS], CosyVoice[^Du2024CosyVoice] \& CosyVoice 2 Tokenizer[^Du2024Cosyvoice], Ints Tokenizer[^Zhang2025Advancing].
+
+We provide more detailed description of these baselines in Appendix~[appendix:baseline_codec](#appendix:baseline_codec).
+
+\input{main_res_tab.tex}
+
+**Results Analysis**\quad
+**1) Compression:**
+\myname{} demonstrates a significantly higher compression rate compared to all baselines.
+
+It operates at a token rate of 6.25 Hz with a single-layer codebook, resulting in a bitrate of 0.0875 kbps.
+
+Among the baselines, the closest in compression rate to \myname{} is the Ints Tokenizer, which has double the token rate and bitrate of \myname{}.
+
+However, it performs worse in terms of WER (7.14 vs. 2.73) and UTMOS (3.37 vs. 3.73) and requires two-stage training and semantic distillation.
+
+All other baselines have a token rate greater than 25 and a bitrate of at least 0.3 kbps.
+
+Compared to other single-stage and distillation-free models, BigCodec has a higher WER (3.25 vs. 2.73) and lower SIM (0.61 vs. 0.69) than \myname{}, with a bitrate of 1.04 kbps.
+
+Models with lower bitrates, such as TAAE, still have bitrates four times higher than ours and perform significantly worse in WER and SIM.
+
+Other single-layer codebook tokenizers like BiCodec, X-codec 2, and WavTokenizer have bitrates 7.4, 9.1, and 10.3 times higher, respectively.
+**2) Reconstruction Quality:**
+
+In terms of WER, \myname{} achieves a score of 3.02 without  decoder continued-training and 2.73 with fine-tuning, ranking just behind DualCodec and X-codec 2, which have scores of 2.57 and 2.63, respectively, but with bitrates 10.6 and 9.1 times higher.
+
+Table~[tab:ablation](#tab:ablation) shows that our setting with a bitrate of 0.175 kbps achieves the best WER.
+
+In terms of SIM, TaDiCodec with  decoder continued-training achieves the best SIM of 0.69, while even without  decoder continued-training, it reaches 0.67, surpassing all baselines except for the CosyVoice 2 tokenizer.
+
+In terms of UTMOS, our model achieves scores of 3.68 and 3.73 (with and without  decoder continued-training), ranking just behind DualCodec and TAAE, which have scores of 3.78 and 3.87.
+
+However, these models operate at much higher bitrates of 0.925 kbps and 0.4 kbps and demonstrate poorer performance in SIM.
+
+**Results for Multilingual**\quad As shown in Table~[tab:rec-multilingual](#tab:rec-multilingual), \myname{} achieves the best WER on English, Chinese, German, and Korean, with especially low WER on Chinese.
+
+It also outperforms all baselines in speaker similarity across all evaluated languages.
+
+<a id="tab:rec-multilingual">**Results of multilingual speech reconstruction.**
+
+In addition to English, we evaluate on five other languages: Chinese (zh), French (fr), German (de), Japanese (ja), and Korean (ko).</a>
+
+**Subject Evaluation Result**\quad
+As shown in Table~[tab:cmos](#tab:cmos), our proposed system achieves the highest CMOS score among evaluated baselines.
+
+More details about subjective evaluation are shown in Appendix~[appendix:sub_eval](#appendix:sub_eval).
+
+#### Ablation Study
+
+\label{sec:tokenizer_ablation}
+
+In this section, we explore several designs for \myname{}.
+
+For the ablation study, we report the results on *SeedTTS test-en* and *SeedTTS test-zh*.
+**1) Vector Quantization Scheme:**
+
+Replacing BSQ with a standard VQ tokenizer (implemented following [^Yu2021Vector-Quantized], [^Kumar2024High-Fidelity] with an explicit codebook of the same size as BSQ) leads to consistent degradation across all evaluation metrics.
+
+This indicates that BSQ more effectively preserves both speech quality and intelligibility.
+**2) Tokenizer Size Scaling:**
+
+Reducing the decoder size to 160M results in substantial performance drops, particularly in English WER. 
+In contrast, increasing the decoder size results in marginal improvements.
+
+These results also imply the existence of a scaling law for \myname{}, warranting further investigation in future work.
+**3) Prompt Mechanism:**
+
+The introduction of the prompt mechanism substantially improves all three evaluation metrics.
+
+A plausible explanation is that the prompt serves as a global conditioning signal (*e.g.*, speaker identity), thereby reducing the quantizer's burden to encode such global information.
+**4) Inference Time Scaling:**
+
+Increasing the number of inference steps to 50 yields marginal improvements, while reducing it to 10 leads to slight degradation.
+
+However, further reduction to 5 steps results in a noticeable drop in performance.
+
+Considering the trade-off between efficiency and quality, using 10 to 32 steps appears to be a reasonable operating range.
+
+We aim to achieve comparable performance with fewer inference steps (*e.g.*, 1-2 steps) by leveraging techniques such as [^Song2023Consistency], [^Zhou2024Score], [^Frans2024One].
+**5) Decoder Continued-training:**
+
+We explore freezing the encoder and the VQ module while only continued-training the decoder for an additional 400K steps, focusing solely on reconstruction.
+
+This approach yields further improvements, with WER dropping from 3.02 to 2.73 for English and from 1.11 to 0.94 for Chinese.
+
+SIM also improves for both languages.
+\textbf{6) Diffusion vs.
+
+GAN:}
+
+We also replace the diffusion loss with PatchGAN[^Demir2018Patch-Based], but observe a noticeable performance drop in both intelligibility and speech quality.
+
+<a id="tab:cmos">**Subjective CMOS scores.**
+
+We randomly choose 40 samples from a in-the-wild data source.
+
+Comparisons between different models can also be found in demo page.</a>
+
+### Zero-shot TTS
+
+\label{sec:zs-tts}
+
+In this section, we present the zero-shot TTS results using \myname{} as the prediction target.
+
+We evaluate two different language modeling approaches: autoregressive (AR) and masked generative modeling (MGM) and we denote our models as "\myname{}-AR'' and "\myname{}-MGM'' respectively.
+
+The results are reported on eight test sets, including *SeedTTS test-en* and *SeedTTS test-zh*, referred to as *Regular en* and *Regular zh*, which are widely adopted benchmarks for TTS evaluation[^Wang2024Maskgct], [^Anastassiou2024Seed-TTS], [^Du2024CosyVoice], [^Du2024Cosyvoice], [^Chen2024F5-TTS], [^Ye2025Llasa], [^Wang2025Spark-TTS].
+
+In addition, we report performance on more challenging test sets, proposed in[^Zhang2025Advancing], covering articulatory scenarios (such as repeated words and tongue twisters), code-switching, and cross-lingual settings.
+
+We provide more details about the evaluation datasets in Appendix~[appendix:test_sets](#appendix:test_sets).
+
+**Baselines**\quad
+We compare with a wide range of open-source and state-of-the-art baselines including: **1)**
+
+AR-based Systems: ARS[^Wang2024Maskgct], CosyVoice 2[^Du2024Cosyvoice], FireRedTTS[^Guo2024FireRedTTS], Ints[^Zhang2025Advancing], SparkTTS[^Wang2025Spark-TTS], Llasa[^Ye2025Llasa]; **2)**
+
+NAR-based systems: MaskGCT[^Wang2024Maskgct] and F5-TTS[^Chen2024F5-TTS].
+
+We provide more detailed description of these baselines in Appendix~[appendix:baseline_tts](#appendix:baseline_tts).
+
+**Main Results**\quad
+We report the main results of our models and baselines on eight test sets in Table~[tab:zs-tts-res](#tab:zs-tts-res).
+
+Our models exhibit significant improvements in intelligibility while maintaining speaker similarity comparable to state-of-the-art zero-shot TTS systems.
+
+In terms of WER, **\myname{**-AR achieves the best performance on the *Regular en* and *Regular zh* test sets, reaching 2.28 and 1.19 respectively}, and outperforming all baselines.
+
+On more challenging test sets, \myname{}-AR demonstrates even more pronounced advantages, for example, reducing WER from 15.03 to 9.16 on *Code-switching en*, and from 4.88 to 2.91 on *Cross-lingual en2zh*.
+
+Notably, these improvements are achieved without any task-specific optimization or reinforcement learning fine-tuning[^Rafailov2023Direct], [^Ouyang2022Training] on WER, as done in work such as[^Du2024Cosyvoice].
+
+For \myname{}-MGM, it consistently outperforms or matches the performance of state-of-the-art NAR zero-shot TTS systems across all test sets.
+
+Even with only 10 inference steps, which is significantly more efficient, it achieves a WER of 1.69 on *Regular zh*, compared to 2.28 from MaskGCT.
+
+On more challenging test sets, such as *Cross-lingual en2zh*, it reaches 4.66 (vs. 13.78 from F5-TTS), and on *Code-switching en*, it achieves 14.94 (vs. 35.35 from F5-TTS).
+
+In terms of SIM, both \myname{}-AR and \myname{}-MGM show clear advantages over recent systems such as FireRedTTS, SparkTTS, and Llasa.
+
+Their SIM scores are slightly lower than those of MaskGCT and CosyVoice 2, which operate at higher frame rates of 50 Hz and 25 Hz, respectively.
+
+<a id="tab:zs-tts-res">**The zero-shot TTS results.**
+
+Beyond regular cases, we also evaluate on challenging scenarios, including articulatory, code-switching, and cross-lingual settings.</a>
+
+**Model Size Scaling, Training and Inference Efficiency**\quad We demonstrate that our 6.25 Hz tokenization is not only effective but also significantly **more efficient for both training and generation**.
+
+We further explore how scaling the model size affects both performance and efficiency.
+
+Results are shown in table~[tab:tts-scaling-rtf](#tab:tts-scaling-rtf).
+
+As described in the implementation details, we train all our TTS models for 300K steps.
+
+We find that the models achieve the optimal evaluation results at around 200K steps.
+
+All models can be trained in approximately one day under our setup, which uses 8 NVIDIA A100 GPUs with flash attention and bf16 precision.
+
+For inference efficiency, we measure using Real-Time Factor (RTF).
+
+We use a 5-second speech as a prompt to generate approximately 10 seconds of speech, sampling 5 times and taking the average.
+
+The experiments show that even with 4.0B parameters, our AR model can achieve an RTF of 0.29 without any deployment acceleration.
+
+With vLLM[^Kwon2023Efficient], the 4.0B AR model can achieve an RTF of 0.13.
+
+Additionally, the 0.6B \myname{}-MGM model achieves an RTF of 0.12.
+
+We also observe a reasonable improvement in performance with increasing model parameters, especially on challenging test sets (*Articulatory*, *Code-switching*, and *Cross-lingual*).
+
+Notably, our 0.5B model already matches or surpasses many state-of-the-art systems with an RTF of 0.22.
+
+<a id="tab:tts-scaling-rtf">\textbf{Results and RTF analysis for TTS model size scaling.</a>
+
+![](image/wer_gap.pdf)
+
+<a id="fig:rec-gen-gap">**Performance gap between reconstruction and generation.**
+
+Each system includes both English and Chinese variants.
+
+Bars represent WER and SIM for reconstruction and generation.</a>
+
+**Reconstruction and Generation Gap**\quad
+In Figure~[fig:rec-gen-gap](#fig:rec-gen-gap), we present the performance gap between reconstruction and generation across multiple systems.
+
+Our proposed system, \myname{}, demonstrates a notably small performance gap: -16.5\% for English WER (generation better than reconstruction), -5.8\% for English SIM, +26.5\% for Chinese WER, and -0.0\% for Chinese SIM.
+
+These results indicate that \myname{} is highly generation-friendly—preserving most of the reconstruction quality during generation.
+
+In contrast, existing systems such as Mimi exhibit a much larger degradation (*e.g.*, -104.5\% en WER gap and -265.9\% zh WER gap), suggesting that they are less effective in transferring reconstruction capabilities to generation.
+
+This highlights the advantage of our design in ensuring consistency between reconstructed and generated outputs.
