--- a/Models/Tokenizers/2025.08.22_TaDiCodec.md
+++ b/Models/Tokenizers/2025.08.22_TaDiCodec.md
@@ -566,3 +566,19 @@ These results highlight \myname{} as a viable and innovative solution for speech
 \newpage
 
 \appendix
+
+## 6·Implementation Details
+
+\label{appendix:imp_detail}
+
+### Model Architecture
+
+\label{appendix:model_arch}
+
+All our models follow the standard Transformer[^Vaswani2017Attention], [^Touvron2023Llama] architecture, employ RoPE positional encoding[^Su2024Roformer] and the SiLU[^Elfwing2018Sigmoid-Weighted] activation function.
+
+The encoder and decoder of the tokenizer and MGM models use bidirectional attention, while the AR models adopt causal attention.
+
+The \myname{}-AR-0.5B and \myname{}-AR-3B models are initialized from the textual LLMs \texttt{Qwen2.5-0.5B-Instruct} and \texttt{Qwen2.5-3B-Instruct} [^Yang2024Qwen2.], respectively, while \myname{}-AR-4B is initialized from \texttt{Phi-3.5-mini-instruct} [^Abdin2024Phi-3].
+
+<a id="tab:model-config">\textbf{Model configurations.</a>
