--- a/Models/Tokenizers/2025.08.22_TaDiCodec.md
+++ b/Models/Tokenizers/2025.08.22_TaDiCodec.md
@@ -582,3 +582,47 @@ The encoder and decoder of the tokenizer and MGM models use bidirectional attent
 The \myname{}-AR-0.5B and \myname{}-AR-3B models are initialized from the textual LLMs \texttt{Qwen2.5-0.5B-Instruct} and \texttt{Qwen2.5-3B-Instruct} [^Yang2024Qwen2.], respectively, while \myname{}-AR-4B is initialized from \texttt{Phi-3.5-mini-instruct} [^Abdin2024Phi-3].
 
 <a id="tab:model-config">\textbf{Model configurations.</a>
+
+## 7·Flow Matching
+
+\label{appendix:fm}
+
+We provide additional details of the flow matching framework used to train the diffusion decoder in \myname{}.
+
+Flow matching[^Lipman2022Flow] defines a continuous transformation from a prior distribution (*e.g.*, Gaussian noise) to a target data distribution (*e.g.*, mel-spectrograms) by learning a time-dependent velocity field along an interpolated trajectory $\boldsymbol{x}_t$.
+
+While multiple interpolation strategies can be used to construct $\boldsymbol{x}_t$, we adopt the *optimal transport path* formulation[^Lipman2022Flow], [^Liu2022Flow], instantiated in this work as simple linear interpolation.
+
+Specifically, given a clean mel-spectrogram $\boldsymbol{x} \in \mathbb{R}^{T \times d}$ and a noise sample $\boldsymbol{\epsilon} \sim \mathcal{N}(\boldsymbol{0}, \boldsymbol{I})$, we construct an intermediate sample as:
+
+$$
+\boldsymbol{x}_t = t \boldsymbol{x} + (1 - t) \boldsymbol{\epsilon}, \quad t \sim \text{Uniform}(0, 1),
+$$
+
+where $t$ is sampled uniformly from $[0, 1]$, and $\boldsymbol{x}_t$ denotes the noisy input at time $t$.
+
+The corresponding ground-truth velocity is the temporal derivative of $\boldsymbol{x}_t$:
+
+$$
+\boldsymbol{v} = \frac{d \boldsymbol{x}_t}{dt} = \boldsymbol{x} - \boldsymbol{\epsilon}.
+$$
+
+The diffusion decoder $\mathcal{D}_\phi$ is trained to predict $\boldsymbol{v}$, conditioned on the token sequence $\boldsymbol{q} = \mathcal{Q}(\mathcal{E}_\theta(\boldsymbol{x}))$ and the associated text $\boldsymbol{x}_{text}$, using the following objective:
+
+$$
+\mathcal{L}_{\text{diff}} = \mathbb{E}_{(\boldsymbol{x}, \boldsymbol{x}_{text}), \boldsymbol{\epsilon}, t} \left[ \left\| (\boldsymbol{x} - \boldsymbol{\epsilon}) - \mathcal{D}_\phi(\boldsymbol{q}, \boldsymbol{x}_t, t, \boldsymbol{x}_{text}) \right\| \right].
+$$
+
+\paragraph{Inference}
+
+At inference time, we start with a noise sample $\boldsymbol{x}_0 = \boldsymbol{\epsilon} \sim \mathcal{N}(\boldsymbol{0}, \boldsymbol{I})$ and solve the ordinary differential equation:
+
+$$
+\frac{d\boldsymbol{x}_t}{dt} = \mathcal{D}_\phi(\boldsymbol{q}, \boldsymbol{x}_t, t, \boldsymbol{x}_{text})
+$$
+
+from $t = 0$ to $t = 1$ using a simple Euler ODE solver over a discretized set of $N$ time steps.
+
+Flow matching provides a stable and interpretable training signal by directly supervising the instantaneous direction in which a noisy sample $\boldsymbol{x}_t$ should evolve to match the clean target $\boldsymbol{x}$.
+
+In our setting, it enables effective training of the speech tokenizer under low bitrate constraints.
