--- a/Models/Tokenizers/2025.08.22_TaDiCodec.md
+++ b/Models/Tokenizers/2025.08.22_TaDiCodec.md
@@ -626,3 +626,49 @@ from $t = 0$ to $t = 1$ using a simple Euler ODE solver over a discretized set o
 Flow matching provides a stable and interpretable training signal by directly supervising the instantaneous direction in which a noisy sample $\boldsymbol{x}_t$ should evolve to match the clean target $\boldsymbol{x}$.
 
 In our setting, it enables effective training of the speech tokenizer under low bitrate constraints.
+
+## 8·Binary Spherical Quantization
+
+\label{appendix:bsq}
+
+Binary Spherical Quantization (BSQ)[^Zhao2024Image] optimizes over an implicit codebook $\mathcal{C}_{\mathrm{BSQ}} = \left\{-\frac{1}{\sqrt{L}}, \frac{1}{\sqrt{L}}\right\}^L$, which corresponds to the $L$-dimensional hypercube projected onto the unit sphere.
+
+Each corner $\boldsymbol{c}_k \in \mathcal{C}_{\mathrm{BSQ}}$ represents a unique discrete token $k \in \{0, \dots, 2^L - 1\}$.
+
+Given an encoder output $\mathcal{E}(\boldsymbol{x})$, we first obtain a low-dimensional latent sequence $\boldsymbol{h} \in \mathbb{R}^{T_q \times L}$ after linear projection.
+
+BSQ then projects each vector $\boldsymbol{h}_t$ in $\boldsymbol{h}$ onto the unit sphere:
+
+$$
+\boldsymbol{u}_t = \frac{\boldsymbol{h}_t}{\|\boldsymbol{h}_t\|},
+$$
+
+and performs binary quantization independently on each dimension:
+
+$$
+\hat{\boldsymbol{u}}_t = \frac{1}{\sqrt{L}} \, \text{sign}(\boldsymbol{u}_t),
+$$
+
+where $\text{sign}(x)$ is the element-wise sign function, with $\text{sign}(0)$ defined as $1$ to ensure codewords lie on the unit sphere.
+
+To enable gradient-based training, BSQ uses the Straight-Through Estimator (STE) for backpropagation:
+
+$$
+\text{sign}_{\text{STE}}(x) = \text{sg}(\text{sign}(x) - x) + x,
+$$
+
+where $\text{sg}(\cdot)$ denotes the stop-gradient operation.
+
+For each vector $\boldsymbol{h}_t$, the corresponding discrete token index is computed as:
+
+$$
+k_t = \sum_{i=1}^L 1_{[\boldsymbol{h}_{t,i} > 0]} \cdot 2^{i-1},
+$$
+
+where $1_{[\cdot]}$ is the indicator function.
+
+This efficient implicit code assignment scheme allows fast token computation and decoding via bitwise operations.
+
+BSQ offers several appealing properties: it avoids the need for an explicit learnable codebook; its quantization error is bounded, allowing the entire system to be trained without a commitment loss[^Van2017Neural].
+
+In this work, we use $L = 14$, resulting in a codebook size of $2^{14} = 16384$.
