--- a/Models/Tokenizers/2025.08.22_TaDiCodec.md
+++ b/Models/Tokenizers/2025.08.22_TaDiCodec.md
@@ -672,3 +672,49 @@ This efficient implicit code assignment scheme allows fast token computation and
 BSQ offers several appealing properties: it avoids the need for an explicit learnable codebook; its quantization error is bounded, allowing the entire system to be trained without a commitment loss[^Van2017Neural].
 
 In this work, we use $L = 14$, resulting in a codebook size of $2^{14} = 16384$.
+
+## 9·Masked Generative Models
+
+\label{appendix:mgm}
+
+In this section, we provide a brief introduction to masked generative models (MGMs)[^Chang2022Maskgit], [^Yu2023Language], [^Wang2024Maskgct].
+
+Let $\boldsymbol{x} = [y_1, y_2, \ldots, y_n]$ denote a discrete sequence of length $n$.
+
+At each time step $t$, we define the masked input as $\boldsymbol{x}_t = \boldsymbol{x} \odot \boldsymbol{m}_t$, where $\boldsymbol{m}_t = [m_{t,1}, m_{t,2}, \ldots, m_{t,n}]$ is a binary mask.
+
+Specifically, $x_i$ is replaced with a special \texttt{[MASK]} token if $m_{t,i} = 1$, and remains unchanged if $m_{t,i} = 0$.
+
+Each mask element $m_{t,i}$ is independently sampled from a Bernoulli distribution with parameter $\gamma(t)$, where $\gamma(t) \in (0, 1]$ is a masking schedule function (e.g., $\gamma(t) = \sin\left(\frac{\pi t}{2T}\right)$ for $t \in (0, T]$).
+
+The fully unmasked input is denoted by $\boldsymbol{x}_0 = \boldsymbol{x}$.
+
+MGMs are trained to reconstruct the original sequence from partially observed inputs, conditioned on an optional context $\boldsymbol{c}$ (*e.g.*, in this paper, text $x_{text}$ is condition), by modeling the conditional distribution $p_\theta(\boldsymbol{x}_0 \mid \boldsymbol{x}_t, \boldsymbol{c})$.
+
+The model parameters $\theta$ are optimized by minimizing the expected marginal cross-entropy over the masked tokens:
+
+$$
+\mathcal{L}_{\text{mask}} = - \mathbb{E}_{\boldsymbol{x}, t, \boldsymbol{m}_t} \sum_{i=1}^{n} m_{t,i} \cdot \log p_{\theta}(y_i \mid \boldsymbol{x}_t, \boldsymbol{c}).
+$$
+
+At inference time, MGMs generate tokens in parallel via iterative decoding.
+
+The process begins with a fully masked sequence $\boldsymbol{x}_T$.
+
+Assuming a total of $S$ decoding steps, at each step $j \in \{1, \ldots, S\}$, a prediction $\boldsymbol{\hat{x}}_0$ is sampled from $p_{\theta}(\boldsymbol{x}_0 \mid \boldsymbol{x}_{T - (j-1)\cdot \frac{T}{S}}, \boldsymbol{c})$.
+
+Then, $\lfloor n \cdot \gamma(T - j \cdot \frac{T}{S}) \rfloor$ tokens are selected based on confidence scores to be remasked, resulting in a new masked sequence $\boldsymbol{x}_{T - j\cdot \frac{T}{S}}$.
+
+The confidence score for $\hat{y}_i$ in $\boldsymbol{\hat{x}}_0$ is given by $p_{\theta}(y_i \mid \boldsymbol{x}_{T - (j-1)\cdot \frac{T}{S}}, \boldsymbol{c})$ if the position $i$ was masked; otherwise, its score is set to $1$, indicating that unmasked tokens will not be remasked.
+
+The $\lfloor n \cdot \gamma(T - j \cdot \frac{T}{S}) \rfloor$ tokens with the lowest confidence scores are selected for masking.
+
+Note that the method for computing confidence scores is not unique.
+
+For example, [^Lezama2022Improved] propose *Token-Critic*, a separate critic model trained to estimate token-wise confidence, thereby guiding the sampling process.
+
+In addition, [^Lezama2022Improved], [^Xie2024Show-O] suggest that masked generative modeling can be interpreted as a simplified form of discrete diffusion.
+
+In this work, we develop MGM models for *text-to-token*.
+
+Given the low token rate of 6.25 Hz, the task is relatively easy to model, and 10 to 25 inference steps are sufficient to achieve good results.
