--- a/Models/Tokenizers/2025.08.22_TaDiCodec.md
+++ b/Models/Tokenizers/2025.08.22_TaDiCodec.md
@@ -1034,3 +1034,20 @@ Each of the six systems: Ours, X-codec 2, DualCodec, WavTokenizer, Mimi, and Gro
 For evaluation, each baseline system is compared against ours, resulting in a total of $40 \times 5 = 200$ sample pairs.
 
 Each pair is evaluated by two human listeners.
+
+## 12·Limitations and Future Work
+
+\label{appendix:limiation}
+
+\myname{} achieves an extremely low frame rate of 6.25 Hz and a corresponding bitrate of 0.0875 kbps using a single-layer codebook for 24 kHz speech compression, while demonstrating strong performance in both reconstruction and text-to-speech tasks in terms of intelligibility, speaker similarity, and speech quality.
+
+There remains room for improvement and several promising directions for future work:
+1) \myname{} employs a diffusion autoencoder for tokenization and de-tokenization, which involves multiple steps during inference.
+
+Compared to GAN-based tokenizers, this results in higher decoding latency.
+
+Future work may explore distillation or more powerful generative models to enable single-step inference while maintaining performance.
+2) While \myname{} has shown its effectiveness for speech language modeling through zero-shot TTS, it is worth further evaluating its applicability in speech understanding and dialogue systems.
+3) \myname{} currently requires text input for the decoder.
+
+It would be valuable to explore unified models that can transcribe, tokenize, and reconstruct speech simultaneously, enabling one model for joint understanding, compression, and reconstruction.
