--- a/Models/SpeechLM_TTS/2025.09.01_MixedG2P-T5.md
+++ b/Models/SpeechLM_TTS/2025.09.01_MixedG2P-T5.md
@@ -18,3 +18,10 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+This study presents a novel approach to voice synthesis that can substitute the traditional grapheme-to-phoneme (G2P) conversion by using a deep learning-based model that generates discrete tokens directly from speech.
+Utilizing a pre-trained voice SSL model, we train a T5 encoder to produce pseudo-language labels from mixed-script texts (e.g., containing Kanji and Kana).
+This method eliminates the need for manual phonetic transcription, reducing costs and enhancing scalability, especially for large non-transcribed audio datasets.
+Our model matches the performance of conventional G2P-based text-to-speech systems and is capable of synthesizing speech that retains natural linguistic and paralinguistic features, such as accents and intonations.\\
