--- a/Models/SpeechLM_TTS/2025.09.01_MixedG2P-T5.md
+++ b/Models/SpeechLM_TTS/2025.09.01_MixedG2P-T5.md
@@ -100,3 +100,37 @@ The decoder module, typically a neural vocoder or sequence-to-sequence model suc
 Interestingly, it has been demonstrated (Figure~1(b)) that this symbolic representation is not strictly language-specific: once the encoder-decoder pipeline is trained on one language, it can be transferred to other languages through fine-tuning, enabling zero-shot or low-resource language synthesis.
 
 This cross-lingual transferability opens the door to G2P-free synthesis across many languages, even those lacking well-defined phonemic resources.
+
+## 3·Research Approach
+
+![](images/T5_model_ronbun.png)
+
+<a id="">Architecture of the Pseudo-Language Label Prediction Model</a>
+
+<a id="tab:corpus">Datasets used for training, fine-tuning, and applying each model</a>
+
+In this work, we extend this idea by using the encoder of GSLM not only for decoding speech but also for constructing a pseudo-language label predictor, which can infer symbolic representations directly from raw text.
+
+The goal is to replace the G2P module with a learned mapping from text, which may contain mixed scripts, such as Kanji and Kana in Japanese, to symbolic tokens that function analogously to phonemes.
+
+Once these pseudo-language labels are predicted, they can be fed into the spectral predictor to produce natural-sounding synthesized speech.
+
+The pseudo-language label predictor is built on top of the T5 architecture[^Raffel2019Exploring], a powerful Transformer-based sequence-to-sequence model known for its success in a wide range of natural language processing tasks.
+
+T5’s encoder-decoder structure allows it to handle inputs and outputs of varying lengths, making it suitable for converting raw text into sequences of symbolic labels.
+
+Moreover, T5 is pretrained on a massive multilingual corpus, which equips it with broad linguistic understanding and generalization capabilities.
+
+In our setting, it enables the conversion of Japanese text—including diverse orthographic patterns—to meaningful discrete symbol sequences.
+
+The architecture of this label predictor is illustrated in Figure~2.
+
+By leveraging this T5-based predictor, we eliminate the need for hand-crafted phoneme dictionaries, morphological analyzers, or accent dictionaries typically required in G2P pipelines.
+
+While prior studies have explored the use of T5 for grapheme-to-phoneme conversion tasks, they remain constrained to alphabetic scripts and conventional G2P paradigms[^Řezáčková2021T5g2p], [^Ao2022S}peech{T}5].
+
+Specifically, their work assumes a clear one-to-one correspondence between characters and phonemes, and does not address the combined demonstration of mixed-script languages.
+
+Also, multilingual G2P systems have also been proposed, but they still operate within a text-based inference thus does not have additional prosodic features essential for natural-sounding speech synthesis, such as accents and durations, that can be obtained from SSL models[^Sokolov2019Neural], [^Vesik2020One], [^Zhu2022ByT5].
+
+Therefore, this study demonstrate a fully G2P-free speech synthesis pipeline that leverages SSL-derived tokens and a T5-based pseudo-language label predictor to handle the structural and phonological intricacies of mixed-script languages, such as Japanese kanji and kana. 
