--- a/Models/Tokenizers/_2025.09.01_Park2025Analysing.md
+++ b/Models/Tokenizers/_2025.09.01_Park2025Analysing.md
@@ -21,3 +21,12 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+This study presents a comparative analysis of the statistical and linguistic properties of neural audio codecs (NACs).
+We investigate discrete speech tokens produced by various NAC models, examining their adherence to linguistic statistical laws such as Zipf's law and Heaps' law, as well as their entropy and redundancy.
+To assess how these token-level properties relate to semantic and acoustic preservation in synthesized speech, we evaluate intelligibility using error rates of automatic speech recognition, and quality using the UTMOS score.
+Our results reveal that NAC tokens, particularly 3-grams, exhibit language-like statistical patterns.
+Moreover, these properties, together with measures of information content, are found to correlate with improved performances in speech recognition and resynthesis tasks.
+These findings offer insights into the structure of NAC token sequences and inform the design of more effective generative speech models.
